--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,7 @@
 #root {
-  max-width: 1280px;
+  display: grid;
+  max-width: 1600px;
   margin: 0 auto;
   padding: 2rem;
   text-align: left;
-}
-
-.align-left {
-  display: flex !important;
-  justify-content: left !important;
 }
